Fix Math.clamp IllegalArgumentException on inverted ranges
The SonarQube "Math.clamp cleanup" replaced tolerant clamping with
java.lang.Math.clamp(value, min, max), which THROWS IllegalArgumentException
when min > max. Several callers legitimately pass inverted ranges during
layout (e.g. the all-apps fast-scroller when the thumb is taller than the
track -> upperBound negative), which crashed the app drawer
(RecyclerViewFastScroller.updatePopupY -> Utilities.boundToRange).

- Utilities.boundToRange (int/float/long): restore the tolerant
  Math.max(lower, Math.min(value, upper)) form (inverted range clamps to
  lowerBound instead of crashing).
- Route the other computed-bound Math.clamp sites through boundToRange:
  RecyclerViewFastScroller, AllAppsRecyclerView (scrollbar), Launcher
  (folder open bounds), DragController (drag-layer bounds).

Surfaced by running the launcher on a real /e/OS (lineage) arm64 emulator
image; the stock emulator crash-looped earlier on hidden-API mismatches and
never reached these paths.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>